--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@ $font_0: Arial;
 $font_1: Helvetica;
 $font_2: sans-serif;
 $font_3: RobotoRegular;
+$font_4: Resphekt;
 
 * {
     margin: 0;
@@ -29,8 +30,12 @@ $font_3: RobotoRegular;
     /*.htaccess file:
     AddType text/x-component .htc*/
 }
-@include font-face("RobotoRegular", font-files( "RobotoRegular/RobotoRegular.woff", "RobotoRegular/RobotoRegular.ttf"), "RobotoRegular/RobotoRegular.eot"/* относительный путь к .eot файлу для IE */
-    );
+
+@include font-face("RobotoRegular", font-files( "RobotoRegular/RobotoRegular.woff", "RobotoRegular/RobotoRegular.ttf"),
+   "RobotoRegular/RobotoRegular.eot"
+);
+@include font-face("Resphekt", font-files( "Resphekt/Resphekt.ttf"));
+
 html,
 body {
     height: 100%;
@@ -62,7 +67,16 @@ header {
 }
 
 .fluid-bg {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), // url(http://lorempixel.com/1080/610/nature);
+    margin-bottom: 0;
+    position: relative;
+    overflow: hidden;
+    height: 80%;
+    color: #f5f5f5;
+    // outline: 5px solid green;
+    // padding: 10em 0;
+    background-image:
+     linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)),
+     // url(http://lorempixel.com/1080/610/nature);
     url("../img/banner.jpg");
     background-repeat: no-repeat;
     background-position: center center;
@@ -71,16 +85,24 @@ header {
     background-attachment: fixed;
     -webkit-background-size: cover;
     background-size: cover;
-    color: #f5f5f5;
-    padding: 10em 0;
-    margin-bottom: 0;
-    height: 100%;
     // height: 60%;
-    .container {
-        bottom: 2em;
-        display: block;
-        // left: 15px; сдвиг error
+    .header-bl-bottom {
+        // bottom: 2em;
+        // display: block;
         position: absolute;
+        left: 0;
+        top: 40%;
+        // width: 100%;
+        text-align: center;
+        p {
+            font-family: $font_4;
+            font-size: 1.8em;
+            color: $color_nav_link;
+        }
+        h3 {
+            color: darken($color_hover_link, 30%);
+            padding-bottom: 20px;
+        }
     }
     h1 {
         font-size: 2em;
@@ -89,8 +111,9 @@ header {
         margin-top: 20px;
         // padding-left: 25px !important;
         // margin-left: 10px;
-        font-weight: 400;
+        // font-weight: 400;
         line-height: 1.1;
+
     }
     p {
         margin-bottom: 30px;
@@ -115,11 +138,21 @@ header {
     // @include box-shadow(grey 2px 2px 10px);
 }
 
-// body {
-//     font: 100%/1.5em $font_0, $font_1, $font_2;
-//     color: $black;
-//     margin-top: 0;
-// }
+.fluid-bg::before {
+    // background-image:
+    // url("../img/banner.jpg");
+    content: '';
+    position: absolute;
+    border-radius: 20px;
+    top: 35%;
+    right: 35%;
+    bottom: 35%;
+    left: 35%;
+    background: hsla(0, 0%, 100%, .3);
+    // filter: blur(1px);
+
+}
+
 .row {
     outline: 5px solid $color_outline;
 }
@@ -347,6 +380,12 @@ footer ul {
     .fluid-bg {
         // background: url('../img/small.jpeg') no-repeat center center;
     }
+    .fluid-bg {
+    height: 50%;
+}
+    .fluid-bg::before {
+        display: none;
+    }
 }
 
 // @media only screen and (min-width: 992px) {
@@ -381,21 +420,25 @@ footer {
     // /* CSS3 c префиксами вендоров */
     // @include background(linear-gradient(top, #aaaaaa, #eeeeee));
 }
+
 .content img {
     border-radius: 0.4em;
-     @include box-shadow(grey 2px 2px 10px);
+    @include box-shadow(grey 2px 2px 10px);
 }
+
 .form-wrapper {
     height: 36px;
 }
-#search-site input, #search-site button{
+
+#search-site input,
+#search-site button {
     padding: 6px;
     border: 1px solid #e7e7e7;
     border-radius: 4px;
     font-size: 0.8em;
     @include box-shadow(grey 1px 1px 3px);
-
 }
+
 // #search-site {
 //         @extend #search-site;
 //         }
